[VD-85] fix API `subscriptions/author`
